// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  "decd8de376ac1991b54fb6d0d9bb280ac3b65b9d237aafe0902e52f4996b2064beb3dee247ce8cf8a6d08dcc6a85e67d7e8cbd70b28a12c54eaa24df61af080f",
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  "decd8de376ac1991b54fb6d0d9bb280ac3b65b9d237aafe0902e52f4996b2064beb3dee247ce8cf8a6d08dcc6a85e67d7e8cbd70b28a12c54eaa24df61af080f",
  "",
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  "a8268456170f0b3f1480ad01e72b209b7696bbeccd1917a78d38cc5424c2fbf5dc6db1104addc9ae036715a83f66dab1c207afceda07bd5812d7fd8f6a015208",
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  "decd8de376ac1991b54fb6d0d9bb280ac3b65b9d237aafe0902e52f4996b2064beb3dee247ce8cf8a6d08dcc6a85e67d7e8cbd70b28a12c54eaa24df61af080f",
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  "decd8de376ac1991b54fb6d0d9bb280ac3b65b9d237aafe0902e52f4996b2064beb3dee247ce8cf8a6d08dcc6a85e67d7e8cbd70b28a12c54eaa24df61af080f",
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      18,
      121,
      19,
      82,
      241,
      102,
      164,
      224,
      66,
      52,
      193,
      84,
      54,
      41,
      162,
      29,
      51,
      176,
      117,
      154,
      123,
      124,
      124,
      123,
      214,
      88,
      219,
      103,
      163,
      62,
      76,
      25,
    ],
    "type": "Buffer",
  },
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      2,
    ],
    "type": "Buffer",
  },
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "commandID": Object {
    "data": Array [
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      18,
      121,
      19,
      82,
      241,
      102,
      164,
      224,
      66,
      52,
      193,
      84,
      54,
      41,
      162,
      29,
      51,
      176,
      117,
      154,
      123,
      124,
      124,
      123,
      214,
      88,
      219,
      103,
      163,
      62,
      76,
      25,
    ],
    "type": "Buffer",
  },
  "moduleID": Object {
    "data": Array [
      0,
      0,
      0,
      2,
    ],
    "type": "Buffer",
  },
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  "decd8de376ac1991b54fb6d0d9bb280ac3b65b9d237aafe0902e52f4996b2064beb3dee247ce8cf8a6d08dcc6a85e67d7e8cbd70b28a12c54eaa24df61af080f",
  "e2d5c2eaffd5cacde7f9382b5f0e3c6d7c68bf0cde8677371c98cf3919e6c5a2cb731f8b3567d231db8bafa40fd3064102699809f27f018bc4f7728641eb9b01",
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  "decd8de376ac1991b54fb6d0d9bb280ac3b65b9d237aafe0902e52f4996b2064beb3dee247ce8cf8a6d08dcc6a85e67d7e8cbd70b28a12c54eaa24df61af080f",
  "e2d5c2eaffd5cacde7f9382b5f0e3c6d7c68bf0cde8677371c98cf3919e6c5a2cb731f8b3567d231db8bafa40fd3064102699809f27f018bc4f7728641eb9b01",
]
`;
